tests/snapshots/parse_failure__object_missing_colon_with_comma.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
{"hi", 
stdout --- 
<empty>
stderr --- 
error: expected colon after key, found `,`
 --> stdin:1:6
  |
1 | {"hi", 
  |  ----^
  |  |
  |  expected due to `"hi"`
  |
help: insert colon and placeholder key
  |
1 | {"hi": "🐟🛹", 
  |      ++++++++
