tests/snapshots/parse_failure__object_missing_colon_with_null.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
{"hi" null 
stdout --- 
<empty>
stderr --- 
error: expected colon after key, found `null`
 --> stdin:1:7
  |
1 | {"hi" null 
  |  ---- ^^^^
  |  |
  |  expected due to `"hi"`
  |
help: insert the missing colon
  |
1 | {"hi":  null 
  |      +
