tests/snapshots/parse_failure__object_missing_comma_between_values.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
{"hi": null null
stdout --- 
<empty>
stderr --- 
error: expected comma or closed curly brace, found `null`
 --> stdin:1:13
  |
1 | {"hi": null null
  | -    ------ ^^^^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
