tests/snapshots/parse_failure__object_with_line_break_value.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
{"hi": "line
break"}
stdout --- 
<empty>
stderr --- 
error: unexpected unescaped control character `\n` in string literal
 --> stdin:1:13
  |
1 |   {"hi": "line
  |  _____________^
2 | | break"}
  | |_^
  |
help: replace the control character with its escaped form
  |
1 | {"hi": "line\nbreak"}
  |             ++
